@@ -1,3 +1,6 @@
+20030108
+ - (djm) Sync openbsd-compat/ with OpenBSD -current
+
 20030107
  - (djm) Bug #401: Work around Linux breakage with IPv6 mapped addresses. 
    Based on fix from yoshfuji@linux-ipv6.org
@@ -942,4 +945,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2548 2003/01/07 12:55:59 djm Exp $
+$Id: ChangeLog,v 1.2549 2003/01/08 00:16:48 djm Exp $
